# sdk-python

./: .buildinfo  .gitignore  README.md  custom_persons.html  custom_tags.html  feeds.html  genindex.html  index.html  metadata.html  metadata_appearances.html  notifications.html  objects.inv  organizations.html  projects.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  settings.html  upload.html  usage.html  users.html
_sources/: metadata.rst.txt  organizations.rst.txt  projects.rst.txt  search.rst.txt  settings.rst.txt  upload.rst.txt  users.rst.txt
docs/: requirements.txt
tests/: base_test.py  (+11 more)
vidrovr/: client.py  exceptions.py  pyproject.toml  pytest.ini
vidrovr/core/: client.py  response.py
vidrovr/resources/: base.py  resource.py
vidrovr/resources/custom_persons/: __init__.py  person.py  person_examples.py
vidrovr/resources/custom_tags/: __init__.py  classifier.py  custom_tag.py  custom_tag_examples.py  tag.py  tag_examples.py
vidrovr/resources/feeds/: README.md  __init__.py  feed_details.py  feed_schedules.py  feeds.py
vidrovr/resources/metadata/: __init__.py  asset_item.py  custom_tags.py  feed_item.py  generic_tags.py  iab_tags.py  keyphrases.py  named_entities.py  object.py  ocr.py  person.py  transcript.py
vidrovr/resources/metadata/appearances/: __init__.py  custom_tags.py  generic_tags.py  iab_tags.py  named_entities.py  object.py  ocr.py  person.py  transcript.py
vidrovr/resources/notifications/: __init__.py  events.py  messages.py  receivers.py  subscriptions.py
vidrovr/resources/organizations/: __init__.py  organization.py  organization_users.py
vidrovr/resources/projects/: __init__.py  projects.py
vidrovr/resources/search/: __init__.py  search.py  search_appearances.py
vidrovr/resources/settings/: __init__.py  languages.py
vidrovr/resources/upload/: upload.py
vidrovr/resources/users/: __init__.py  roles.py  token.py  user.py
vidrovr/tests/: base_test.py  pytest.ini  test_custom_persons.py  test_custom_tags.py  test_feeds.py  test_metadata.py  test_metadata_appearances.py  test_organizations.py  test_projects.py  test_search.py  test_settings.py  test_upload.py  test_users.py
(+75 files in other folders)
