[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidrovr"
version = "0.0.4"

authors = [
    {name="Vidrovr", email="support@vidrovr.com"},
    {name="Sean Slavin", email="sean.slavin@vidrovr.com"}
]

description = "Vidrovr SDK package"
readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vidrovr-dev/sdk-python"
"Bug Tracker" = "https://github.com/vidrovr-dev/sdk-python/issues"
