[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidrovr"

authors = [
    {name="Vidrovr", email="support@vidrovr.com"},
    {name="Sean Slavin", email="sean.slavin@vidrovr.com"}
]

description = "Vidrovr SDK package"
readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = [
    "dependencies",
    "version"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.urls]
"Homepage" = "https://github.com/vidrovr-dev/sdk-python"
"Bug Tracker" = "https://github.com/vidrovr-dev/sdk-python/issues"
