[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vidrovr"
version = "0.0.1"
authors = [
    { name="Vidrovr", email="support@vidrovr.com" },
]
description = "Vidrovr SDK package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vidrovr/sdk"
"Bug Tracker" = "https://github.com/vidrovr/sdk/issues"